# delivery-service

./: .dockerignore  .env.example  Dockerfile  Dockerfile.worker  README.md  alembic.ini  docker-compose.yml  pyproject.toml
src/: main.py
src/api/: routers.py
src/api/v1/: __init__.py  package_types.py  packages.py
src/core/: app_settings.py  db_settings.py  mq_settings.py
src/crud/: package_types.py  packages.py
src/migrations/: env.py
src/migrations/versions/: 40d20bee804d_initial_tables.py  b273aa443897_initial_tables.py  b3b68d68bce8_insert_types.py
src/models/: __init__.py  annotations.py  base.py  package.py  package_types.py
src/schemas/: __init__.py  package.py  packagetypes.py
src/services/: currency.py  exception_handlers.py  middlewares.py  package_types.py  package_worker.py  packages.py  rabbitmq_producer.py
src/workers/: package_consumer.py
